# TestEngine

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  renderdoc_debug.sh
src/: CMakeLists.txt  cmakeConfig.h  cmakeConfig.h.in  main.cpp
src/engine/assets/: AssetManager.cpp  AssetManager.hpp  Files.hpp  ImageData.hpp  ResourceHandle.hpp  ResourceManager.cpp  ResourceManager.hpp
src/engine/assets/codecs/images/: PngCodec.cpp  PngCodec.hpp
src/engine/assets/coders/images/: JpgCoder.cpp  JpgCoder.hpp  PngCoder.cpp  PngCoder.hpp
src/engine/assets/old/utils/: MeshGen.cpp
src/engine/assets/utils/: Files.cpp  Files.hpp  ImageData.cpp  ImageData.hpp  MeshGen.cpp  MeshGen.hpp
src/engine/core/: Application.cpp  Application.hpp  CommandLineArgs.cpp  CommandLineArgs.hpp  Engine.cpp  Engine.hpp
src/engine/debug/: LogLevel.hpp  Logger.cpp  Logger.hpp
src/engine/debug/logging/: ConsoleLoggerMiddleware.cpp  ConsoleLoggerMiddleware.hpp  FileLoggerMiddleware.cpp  FileLoggerMiddleware.hpp  Log.hpp  Logger.cpp  Logger.hpp  LoggerConfig.cpp  LoggerConfig.hpp  LoggerFilePool.cpp  LoggerFilePool.hpp  LoggerMiddleware.hpp  Logging.cpp  Logging.hpp
src/engine/events/: Event.hpp  EventConnection.hpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp
src/engine/gameobject/: Component.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  System.hpp
src/engine/gameobject/components/: Behavior.hpp  Hierarchy.hpp  Transform.hpp
src/engine/graphics/: Camera.cpp  Camera.hpp  ClusteredRenderer.cpp  ClusteredRenderer.hpp  ComputeShader.cpp  ComputeShader.hpp  GBuffer.cpp  GBuffer.hpp  LightBVHWrapper.cpp  LightBVHWrapper.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SamplerDefinition.hpp  SamplerType.hpp  Shader.cpp  Shader.hpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.hpp  Texture.cpp  Texture.hpp
src/engine/graphics/components/: PointLight.cpp  PointLight.hpp
src/engine/map/: Player.cpp  Player.hpp
src/engine/materials/: BaseMaterial.cpp  BaseMaterial.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  MaterialBuilder.cpp  MaterialBuilder.hpp  MaterialDataBuffer.cpp  MaterialDataBuffer.hpp  MaterialDescriptor.hpp  MaterialGraphicsConfig.hpp  MaterialInstance.cpp  MaterialInstance.hpp  MaterialLayout.cpp  MaterialLayout.hpp  MaterialProperty.cpp  MaterialProperty.hpp  MaterialRegistry.cpp  MaterialRegistry.hpp  PropertyDataStorage.cpp  PropertyDataStorage.hpp  TextureMaterial.cpp  TextureMaterial.hpp  TypedPropertyStorage.cpp  TypedPropertyStorage.hpp
src/engine/materials/glslPreprocessor/: DirectiveHandler.hpp  Preprocessor.hpp  PreprocessorLexer.cpp  PreprocessorLexer.hpp  PreprocessorParser.cpp  PreprocessorParser.hpp  PreprocessorParserContext.hpp  ShaderCache.hpp  ShaderFile.hpp  ShaderSectionType.hpp
src/engine/materials/old/: BaseMaterial.cpp  BaseMaterial.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  TextureMaterial.cpp  TextureMaterial.hpp
src/engine/materials/preprocessor/: Preprocessor.cpp  Preprocessor.hpp  PreprocessorCache.cpp  PreprocessorCache.hpp  PreprocessorLexer.hpp  PreprocessorParser.cpp  PreprocessorParser.hpp  ShaderCache.cpp  ShaderCache.hpp  ShaderDependencyGraph.cpp  ShaderDependencyGraph.hpp  ShaderDiagnostic.cpp  ShaderDiagnostic.hpp  ShaderSourceCache.cpp  ShaderSourceCache.hpp
src/engine/materials/templateGenerators/: GeomShaderGenerator.hpp  MaterialCodeGenerator.cpp  MaterialCodeGenerator.hpp  ShaderCodeGenerator.cpp  ShaderCodeGenerator.hpp  ShaderGenerator.hpp
src/engine/materials/templategenerators/: GeomShaderGenerator.cpp  GeomShaderGenerator.hpp  ShaderGenerator.cpp  ShaderGenerator.hpp
src/engine/models/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelComponent.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelManager.cpp  ModelManager.hpp
src/engine/player/: Player.cpp  Player.hpp
src/engine/project/: File.cpp  File.hpp  FilesystemAbstraction.hpp  GeneralPathResolver.cpp  GeneralPathResolver.hpp  PathResolver.cpp  PathResolver.hpp  Project.cpp  Project.hpp  ProjectLoader.cpp  ProjectLoader.hpp  VirtualFilesystem.cpp  VirtualFilesystem.hpp  VirtualPath.cpp  VirtualPath.hpp
src/engine/resource/: Resource.hpp  ResourceHandle.cpp  ResourceHandle.hpp  ResourceImporter.hpp  ResourceManager.hpp
src/engine/resource/coders/images/: JpgCoder.cpp  PngCoder.cpp  PngCoder.hpp
src/engine/scene/: Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  StaticObject.cpp  StaticObject.hpp
src/engine/stdlib/: LightBVH.hpp
src/engine/stringProcessing/templateEngine/: TemplateEngine.cpp  TemplateEngine.hpp  TemplateLexer.hpp  TemplateParser.cpp
src/engine/stringProcessing/utils/: Parser.hpp  StringFunctions.cpp  StringFunctions.hpp  StringInfo.hpp
src/engine/stringprocessing/templateengine/: TemplateArguments.cpp  TemplateArguments.hpp  TemplateEngine.cpp  TemplateEngine.hpp  TemplateLexer.cpp  TemplateLexer.hpp  TemplateParser.cpp  TemplateParser.hpp
src/engine/stringprocessing/utils/: ParseExceptions.hpp  Parser.hpp  StringFunctions.cpp  StringFunctions.hpp
src/engine/time/: Clock.cpp  Clock.hpp
src/engine/utils/: EngineTypes.h  EnumMapper.hpp
src/engine/utils/exc/: GeneralExceptions.hpp  ParseExceptions.hpp
src/engine/utils/json/: JSONValidator.cpp  JSONValidator.hpp
src/engine/window/: InputContoller.cpp  InputContoller.hpp  InputController.cpp  InputController.hpp  Keyboard.cpp  Keyboard.hpp  UserInput.cpp  UserInput.hpp  UserInput2.cpp  UserInput2.hpp  Window.cpp  Window.hpp  Window2.cpp  Window2.hpp  WindowEvents.hpp
src/time/: Clock.cpp  Clock.hpp  Timestamp.hpp
tests/: CMakeLists.txt
tests/GameObject/: GameObjectTests.cpp
tests/events/: EventConnectionTests.cpp  EventHandlerTests.cpp  EventManagerTests.cpp  EventTests.cpp
tests/material/: TypedPropertyStorageTests.cpp
tests/project/: PathResolverTests.cpp
(+53 files in other folders)
